--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
     "python.formatting.provider": "autopep8",
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
-    "files.autoSave": "onWindowChange"
+    "files.autoSave": "onWindowChange",
+    "python-envs.defaultEnvManager": "ms-python.python:system",
+    "python-envs.pythonProjects": []
 }
